--- a/apps/templates/profile/detail.html
+++ b/apps/templates/profile/detail.html
@@ -79,6 +79,9 @@
                             555-5555-555
                         </label>
                     </div>
+                    <div class="mt-3 float-end">
+                        <a href="{% url "contact" slug=user.username %}" class="btn btn-outline-secondary btn-sm">Editar</a>
+                    </div>
                 </div>
             </div>
         </div>
