--- a/apps/templates/dashboard/index.html
+++ b/apps/templates/dashboard/index.html
@@ -17,7 +17,7 @@
         <ul class="">
             <li class="list-group-item">
                 <div class="form-check mb-3">
-                    <a href="{% url "profession" slug=user.profile.slug %}">
+                    <a href="{% url "academica" slug=user.profile.slug %}">
                         <input class="form-check-input" type="checkbox" value="">
                         <label class="form-check-label text-dark" for="flexCheckDefault">
                         Personaliza tu cuenta de perfil
@@ -27,7 +27,7 @@
             </li>
             <li class="list-group-item">
                 <div class="form-check mb-3">
-                    <a href="{% url "profession" slug=user.profile.slug %}">
+                    <a href="{% url "academica" slug=user.profile.slug %}">
                         <input class="form-check-input" type="checkbox">
                         <label class="form-check-label text-dark" for="flexCheckDefault">
                         Crea tu primer registro de Software.
