profile;academica;user

--- a/apps/templates/includes/navbar.html
+++ b/apps/templates/includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-white p-2" style="width: 100%;">
+<nav class="navbar navbar-expand-lg bg-white p-2">
   <div class="d-flex justify-content-between" style="width:100%;">
 
     <a class="navbar-brand" href="{% url 'dashboard' %}">Nombre aplicacion</a>
