--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -1,52 +1,116 @@
-<div class="bg-secondary-subtle" style="width:16rem;height:100%;">
-    <div class="d-grid gap-2 p-2">
-        <a href="{% url 'repository_new' %}" class="btn btn-outline-light text-dark icon-link">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
-            </svg>
-            Nuevo registro
-        </a>
-    </div>
-    <div class="p-2">
-        <p class="text-secondary">Reciente</p>
-        <div class="border" style="width: 100%;height:20rem;">
-            {% if repositories %}
-                {% for repo in repositories %}
-                    <input class="form-control form-control-sm mt-2 mb-3" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
-                    <a href="{% url "repository" slug=repo.slug %}" class="icon-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
-                            <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
-                            <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z"/>
-                        </svg>    
-                        {{user}}/{{repo.title}}
-                    </a>
-                {% endfor %}
-            {% endif %}
-        </div>
-    </div>
-    <div class="p-3">
-        <div class="btn-group-vertical w-100">
-            <a class="icon-link mb-3 btn" style="width: 100%;" href="{% url "dashboard" %}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor"
-                    class="bi bi-house-door" viewBox="0 0 16 16">
-                    <path
-                        d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4z" />
-                    </svg>
-                Inicio
+{% block css %}
+<style>
+    nav{
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        height: 100%;
+        left: 0;
+        background: #fff;
+        width: 90px;
+        overflow: hidden;
+        {% comment %} transition: width 0.2s linear; {% endcomment %}
+        box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+    }
+
+    .navbar{
+        width: 80%;
+        margin: 0 auto;
+    }
+    
+    .logo{
+        text-align: center;
+        display: flex;
+        {% comment %} transition: all 0.5s ease; {% endcomment %}
+        margin: 10px 0 0 10px;
+    }
+    
+    .logo img{
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
+    }
+    
+    .logo span{
+        font-weight: bold;
+        padding-left: 15px;
+        font-size: 18px;
+        text-transform: uppercase;
+    }
+    
+    a{
+        position: relative;
+        color: rgb(85, 83, 83);
+        font-size: 14px;
+        display: table;
+        width: 300px;
+        padding: 10px;
+    }
+    
+    svg{
+        position: relative;
+        width: 70px;
+        height: 40px;
+        top: 14px;
+        font-size: 20px;
+        text-align: center;    
+    }
+    
+    .nav-items{
+        position: relative;
+        top: 12px;
+        margin-left: 10px;
+    }
+    
+    a:hover{
+        background-color: #eee;
+    }
+    
+    nav:hover{
+        width: 20px;
+        {% comment %} transition: all 0.5s ease; {% endcomment %}
+    }
+    
+    .logout{
+        position: absolute;
+        bottom: 0;
+    }
+</style>
+{% endblock css %}
+
+<nav>
+    <ul class="navbar">
+        <li>
+            <a href="{% url "dashboard" %}" class="logo">
+                <img src="#" alt="sin">
+                <span class="nav-items">name app</span>
             </a>
-            <a class="icon-link mb-3 btn" style="width: 100%;" href="{% url "profile" slug=user.username %}">
+        </li>
+        <li>
+            <a href="{% url "dashboard" %}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
+                    <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4z" />
+                </svg>
+                <span class="nav-items">Inicio</span>
+            </a>
+        </li>
+        <li>
+            <a href="{% url "profile" slug=user.username %}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person"
                     viewBox="0 0 16 16">
-                    <path
-                        d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
+                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
                 </svg>
-                Perfil
+                <span class="nav-items">Perfil</span>
             </a>
-            <a class="icon-link mb-3 btn" style="width: 100%;" href="{% url "logout" %}">
-                Cerrar Sesión
+        </li>
+        <li>
+            <a href="{% url "logout" %}" class="logout">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
+                    <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+                </svg>
+                <span class="nav-items">Cerrar sesión</span>
             </a>
-        </div>
-
-    </div>
-
-</div>
+        </li>
+    </ul>
+</nav>
