--- a/apps/templates/repository/detail.html
+++ b/apps/templates/repository/detail.html
@@ -6,221 +6,48 @@
 @{{user}}/{{software.title}}
 {% endblock title %}
 
+{% block css %}
+<style>
+    .overflow-container{
+        background: #ffff;
+        color: black;
+        padding: 15px;
+        width: 100%;
+        height: 500px;
+        overflow: scroll;
+    }
+</style>
+{% endblock css %}
+
 {% block content %}
-<p><hr class="dropdown-divider"></p>
+<div class="container">
+    <h2 class="h3 fw-bold">Introducción</h2>
+    <p>
+        Bienvenido/a a la descripción del producto de software <strong>{{software.title.capitalize}}</strong>. Esta guía tiene como objetivo proporcionar una visión general detallada de las características, funcionalidades y beneficios que ofrece nuestro software <strong>{{software.title.capitalize}}</strong>.
+        En un mundo cada vez más digitalizado, la demanda de soluciones eficientes y fiables para abordar una amplia gama de necesidades esenciales en el ámbito profesional y personal ha crecido exponencialmente. Con este fin, nuestro equipo se enorgullece en presentar <strong>{{software.title.capitalize}}</strong>.
 
-<div class="row">
-    <div class="col-4">
-        <div class="list-group h-100">
-            <a href="#" class="list-group-item list-group-item-action bg-secondary" aria-current="true">
-              The current link item
-            </a>
-        
-        
-            <a class="icon-link list-group-item " href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                    <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                </svg>
-                ...
-            </a>
-            <a class="icon-link list-group-item " href="#list-item-1">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                    <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                </svg>
-                Código fuente
-            </a>
-            <a class="icon-link list-group-item " href="#list-item-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                    <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                </svg>
-                Ficha de catalogación
-            </a>
-            <a class="icon-link list-group-item " href="#list-item-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                    <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                </svg>
-                Requisitos del sistema
-            </a>
-            <a class="icon-link list-group-item list-group-item-action" href="#list-item-4">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                    <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                </svg>
-                Manual de instalación
-            </a>
-            <a class="icon-link list-group-item list-group-item-action" href="#list-item-5">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                    <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                </svg>
-                Autor(es)
-            </a>
-            <a class="icon-link list-group-item list-group-item-action disabled" aria-disabled="true">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                    <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                </svg>
-                Documentos
-            </a>
-        </div>
-    </div>
-    <div class="col-8">
-        <h1 class="h1 mb-3 text-center fw-bold">{{software.title.upper}}</h1>
-        <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
-            <h4 id="list-item-1">Descripción del software</h4>
-            <p>Bienvenido a la documentación de <strong>{{software.title.capitalize}}</strong>. Aquí encontrará toda la información que necesita para empezar a utilizar nuestro producto.</p>
-            <h4 id="list-item-2">Introducción</h4>
-            <p class="text-xxl-end">
-                Bienvenido/a a la descripción del producto de software <strong>{{software.title.capitalize}}</strong>. Esta guía tiene como objetivo proporcionar una visión general detallada de las características, funcionalidades y beneficios que ofrece nuestro software <strong>{{software.title.capitalize}}</strong>.
-                En un mundo cada vez más digitalizado, la demanda de soluciones eficientes y fiables para abordar una amplia gama de necesidades esenciales en el ámbito profesional y personal ha crecido exponencialmente. Con este fin, nuestro equipo se enorgullece en presentar <strong>{{software.title.capitalize}}</strong>, una herramienta diseñada para <strong class="fw-light">{{ software.description }}</strong>.
-                Esta introducción proporcionará una visión general de alto nivel del software, su propósito y su audiencia prevista. A lo largo de este documento, exploraremos en detalle las características clave, los requisitos del usuario, la instalación y configuración, así como otros aspectos relevantes para garantizar una experiencia óptima para nuestros usuarios.
-
-                A medida que avanzamos, invitamos a los lectores a sumergirse en el mundo de <strong>{{software.title.capitalize}}</strong>, descubriendo cómo nuestras soluciones pueden satisfacer sus necesidades específicas y contribuir al logro de sus objetivos tanto profesionales como personales.
-            </p>
-            <h4 id="list-item-3">Resumen ejecutivo</h4>
-            <p>
-                El software <strong>{{software.title.capitalize}}</strong> es una solución innovadora diseñada para {{ software.description }}. Con una interfaz intuitiva y potentes características, <strong>{{software.title.capitalize}}</strong> está diseñado para satisfacer las necesidades de [audiencia objetivo, por ejemplo, profesionales de negocios, equipos de desarrollo, estudiantes, etc.].
-
-                Características Clave:
-
-                    [Lista de características destacadas del software]
-                    [Otra característica importante]
-                    [Otra característica importante]
-
-                Beneficios Principales:
-
-                Aumento de la eficiencia y productividad.
-                Mejora en la gestión de [área específica, por ejemplo, datos, proyectos, comunicación, etc.].
-                Reducción de costos y recursos.
-
-                Audiencia Objetivo:
-                [Descripción de la audiencia a la que se dirige el software, incluyendo sus necesidades y desafíos específicos.]
-            </p>
-            <h4 id="list-item-4" >Información General</h4>
-            <table class="table border" style="width:19rem;">
-                <tbody>
-                  <tr>
-                    <th scope="row">Titúlo de Software</th>
-                    <td>{{ software.title }}</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Tipo de programa</th>
-                    <td>Jacob</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Versión actual.</th>
-                    <td colspan="2">{{ software.version }}</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Licencia</th>
-                    <td colspan="2">
-                        {{ software.license }}
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Fecha de publicación o última actualización.</th>
-                    <td colspan="2">{{ software.date_created }}</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Nombre de la empresa o equipo desarrollador.</th>
-                    <td colspan="2">{{ software.date_created }}</td>
-                  </tr>
-                </tbody>
-              </table>
-            <h4 id="list-item-4">Información General</h4>
-            <p>{% lorem 2 b random %}</p>
-        </div>
-    </div>
+    </p>
+    <p>
+        A medida que avanzamos, invitamos a los lectores a sumergirse en el mundo de <strong>{{software.title.capitalize}}</strong>, descubriendo cómo nuestra solución pueden satisfacer sus necesidades específicas y contribuir al logro de sus objetivos tanto profesionales como personales.
+    </p>
 </div>
-
-<div class="row">
-    <div class="col-4">
-        <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
-            <nav class="nav nav-pills flex-column">
-                <a class="nav-link" href="#item-1">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                        <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                    </svg>
-                    ...
-                </a>
-                <a class="nav-link" href="#item-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                        <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                    </svg>
-                    Descripción de software
-                </a>
-                <nav class="nav nav-pills flex-column">
-                    <a class="nav-link ms-3 my-1" href="#item-1-1">Datos generales</a>
-                    <a class="nav-link ms-3 my-1" href="#item-1-2">Catalogación de software</a>
-                    <a class="nav-link ms-3 my-1" href="#item-1-2">Instalación</a>
-                </nav>
-                <a class="nav-link" href="#item-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                        <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                    </svg>
-                    Interfaz de usuario
-                </a>
-                <a class="nav-link" href="#item-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                        <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                    </svg>
-                    Autor(es)
-                </a>
-                <a class="nav-link" href="#item-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                        <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                    </svg>
-                    Requisitos del sistema
-                </a>
-                <nav class="nav nav-pills flex-column">
-                    <a class="nav-link ms-3 my-1" href="#item-1-1">Funcionales</a>
-                    <a class="nav-link ms-3 my-1" href="#item-1-2">No funcionalidades</a>
-                </nav>
-                <a class="nav-link" href="#item-3">Código fuente</a>
-                <a class="nav-link" href="#item-3">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
-                        <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
-                    </svg>
-                    Documentos
-                </a>
-            <nav class="nav nav-pills flex-column">
-                <a class="nav-link ms-3 my-1" href="#item-3-1">Item 3-1</a>
-                <a class="nav-link ms-3 my-1" href="#item-3-2">Item 3-2</a>
-            </nav>
-            </nav>
-        </nav>
-    </div>
-  
-    <div class="col-8">
-      <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
-        <div id="item-1">
-          <h4>Item 1</h4>
-          <p>...</p>
-        </div>
-        <div id="item-1-1">
-          <h5>Item 1-1</h5>
-          <p>...</p>
-        </div>
-        <div id="item-1-2">
-          <h5>Item 1-2</h5>
-          <p>...</p>
-        </div>
-        <div id="item-2">
-          <h4>Item 2</h4>
-          <p>...</p>
-        </div>
-        <div id="item-3">
-          <h4>Item 3</h4>
-          <p>...</p>
-        </div>
-        <div id="item-3-1">
-          <h5>Item 3-1</h5>
-          <p>...</p>
-        </div>
-        <div id="item-3-2">
-          <h5>Item 3-2</h5>
-          <p>...</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
+<div class="container">
+    <h2 class="h3 fw-bold">Descriptión del software</h2>
+    <p>
+        La herramienta QARNX desarrollada en el proyecto denominado EVALUACIÓN DE METODOS DE REDUCCIÓN DE DIMENSION PARA LA PRESERVACIÓN TOPOLOGICA DE LOS DATOS MEDIANTE METRICAS RNX, se presenta como
+        una alternativa Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae quasi voluptate repellat eos perspiciatis numquam quibusdam eligendi totam sit non officiis a expedita repudiandae mollitia soluta, amet veritatis autem maxime!
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perspiciatis facilis, consequuntur nulla laboriosam ipsam natus fuga fugit sed quibusdam deserunt voluptate facere, aut id magnam eos in. Ipsam, ipsum.
+    </p>
+</div>
+<div class="container">
+    <h2 class="h3 fw-bold">Proposito y objetivos</h2>
+    <p>
+        El propósito de Gestor de tareas es ayudar a los usuarios a ser más productivos y organizados. Los objetivos del producto son proporcionar una interfaz de usuario sencilla e intuitiva, una amplia gama de funciones y una experiencia de usuario fiable.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perspiciatis facilis, consequuntur nulla laboriosam ipsam natus fuga fugit sed quibusdam deserunt voluptate facere, aut id magnam eos in. Ipsam, ipsum.
+    </p>
+</div>
 {% endblock content %}
