--- a/apps/templates/profile/role.html
+++ b/apps/templates/profile/role.html
@@ -6,38 +6,97 @@
 @{{user}} - Role
 {% endblock title %}
 
+{% block css %}
+<style>
+/* add this to your :root variables */
+.checkbox {
+  --light: rgba(255, 244, 244, 0.425);
+  --primary-color: #8c00ff;
+  --duration: 0.3s;
+  --ease: ease-in-out;
+}
+ 
+  /* hide checkbox */
+.card-body label{
+  width: 200px;
+  height: 200px;
+  margin: 0.5rem;
+  cursor: pointer;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
+}
+  
+  .card:hover{
+    background: var(--light);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(34, 32, 32, 0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(27, 26, 26, 0.75);
+    box-shadow: 10px 10px 5px 0px rgba(53, 52, 52, 0.75);
+  }
+  
+  .card-body label input {
+    height: 20px;
+    width: 20px;
+  }
+  
+  .card-body label img{
+    margin-bottom: 1rem;
+  }
+  
+</style>
+{% endblock css %}
+
 {% block content %}
-<div class="container">
+<div class="d-flex justify-content-center">
+  <div class="container p-3">
     <form method="POST" class="w-50">
-        {% csrf_token %}
-        <input type="number" value={{user.id}} name="user" style="display: none;">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body" style="cursor:pointer;">
-                        <label for="" id="id_rol_1">
-                            <input type="radio" name="rol" id="id_input_rol_1" value="PROFESOR">
-                            profesor
-                        </label>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body" style="cursor:pointer;">
-                        <label for="" id="id_rol_2" >
-                            <input type="radio" name="rol" id="id_input_rol_2" value="ESTUDIANTE">
-                            estudiante
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- {{ form.as_p }} -->
-        <input type="submit" value="Continue">
+      <h2 class="h3 fw-bold mb-3 text-center">¿Cuál es tu ocupación actual?</h2>
+
+      {% csrf_token %}
+      <input type="number" value={{user.id}} name="user" style="display: none;">
+
+      <div class="row checkbox">
+          <div class="col-sm-6">
+              <div class="card">
+                  <div class="card-body" >
+                      <label for="" id="id_rol_1" >
+                        <img src="{% static "images/teacher.png" %}" alt="teacher" width="100px">
+                        <div>
+                          <input type="radio" name="rol" id="id_input_rol_1" value="PROFESOR">
+                          <span class="h4 fw-bold">Docente</span>
+                        </div>
+                        <small class="text-secondary text-center">Trabaja de forma colaborativa en tus proyectos software.</small>
+                      </label>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6">
+              <div class="card">
+                  <div class="card-body">
+                      <label for="" id="id_rol_2" class="checkbox-content">
+                        <img src="{% static "images/student.png" %}" alt="student" width="100px">
+                        <div>
+                          <input type="radio" name="rol" id="id_input_rol_2" value="ESTUDIANTE">
+                          <span class="h4 fw-bold">Estudiante</span>  
+                        </div>
+                        <small class="text-secondary text-center">Gestiona todos tus proyectos software.</small>
+                      </label>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="d-grid gap-2 p-2">
+        <input type="submit" class="btn btn-sm btn-dark mt-2" value="Continue" >
+      </div>
     </form>
+  </div>
 </div>
 
 {% endblock content %}
 
-{% block javascript %}{% endblock javascript %}
+{% block javascript %}
+<script>
+</script>
+{% endblock javascript %}
