--- a/apps/templates/profile/university.html
+++ b/apps/templates/profile/university.html
@@ -9,28 +9,29 @@
 {% block content %}
 <div class="container mt-5">
     <form method="POST" class="w-50">
+        <h2 class="h4 fw-bold text-center">Cuentanos acerca de tu perfil profesional</h2>
+
         {% csrf_token %}
-        <!-- <input type="text" name="user" value={{user.id}} style="display: none;"> -->
         <div class="mt-3">
-            <h2 class="h4 fw-bold">¿Cuál es tu Universidad?</h2>
+            <h2 class="h5 fw-light">¿Cuál es tu Universidad?</h2>
             {{ form.university }}
         </div>
         <div class="mt-3">
             {% if user.academica.rol == 'PROFESOR' %}
-            <h2 class="h4 fw-bold">¿Cuál es tu titulo profesional?</h2>
+            <h2 class="h5 fw-light">¿Cuál es tu titulo profesional?</h2>
             {% else %}
-            <h2 class="h4 fw-bold">¿Qué estas estudiando?</h2>
+            <h2 class="h5 fw-light">¿Qué estas estudiando?</h2>
             {% endif %}
             {{ form.profession }}
         </div>
         <div class="mt-3">
             {% if user.academica.rol == 'ESTUDIANTE' %}
-            <h2 class="h4 fw-bold">¿Qué semestre estas cursando actualmente?</h2>
+            <h2 class="h5 fw-light">¿Qué semestre estas cursando actualmente?</h2>
             {{ form.semester }}
             {% endif %}
         </div>
 
-        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+        <div class="d-grid gap-2 p-2">
             <input type="submit" class="btn btn-sm btn-dark mt-2" value="Guardar" >
         </div>
     </form>
