--- a/apps/templates/base/index.html
+++ b/apps/templates/base/index.html
@@ -20,9 +20,7 @@
   {% endblock cdn %}
 
 
-  {% block css %}
-  
-  {% endblock css %}
+  {% block css %}{% endblock css %}
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -31,136 +29,12 @@
 </head>
 
 <body>
-  <div class="row">
-    <div class="col-sm-3">
-      {% include "includes/sidebar.html" %}
-    </div>
-  </div>
+
   {% include "includes/navbar.html" %}
 
 
 
-  {% block content %}
-  <section class="main">
-    <div class="main-top">
-      <p>Explore the universe!</p>
-    </div>
-    <div class="main-body">
-      <h1>Recent Jobs</h1>
-    
-    <div class="search_bar">
-      <input type="search" placeholder="Search job here...">
-      <select name="" id="">
-        <option>Category</option>
-        <option>Web Design</option>
-        <option>App Design</option>
-        <option>App Development</option>
-      </select>
-      <select class="filter">
-        <option>Filter</option>
-      </select>
-    </div>
-    <div class="tags_bar">
-      <div class="tag">
-        <i class="fas fa-times"></i>
-        <span>Programming</span>
-      </div>
-      <div class="tag">
-        <i class="fas fa-times"></i>
-        <span>Design</span>
-      </div>
-      <div class="tag">
-        <i class="fas fa-times"></i>
-        <span>PHP</span>
-      </div>
-      <div class="tag">
-        <i class="fas fa-times"></i>
-        <span>JavaScript</span>
-      </div>
-    </div>
-    <div class="row">
-      <p>There are more than <span>400</span> Jobs</p>
-      <a href="#">See all</a>
-    </div>
-    <div class="job_card">
-      <div class="job_details">
-        <div class="img">
-          <i class="fab fa-google-drive"></i>
-        </div>
-        <div class="text">
-          <h2>UX Designer</h2>
-          <span>Google Drive - Junior Post</span>
-        </div>
-      </div>
-      <div class="job_salary">
-        <h4>$6.7 - $12.5k /yr</h4>
-        <span>1 days ago</span>
-      </div>
-    </div>
-    
-    <div class="job_card">
-      <div class="job_details">
-        <div class="img">
-          <i class="fab fa-google"></i>
-        </div>
-        <div class="text">
-          <h2>JavaScript Developer</h2>
-          <span>Google - Senior Post</span>
-        </div>
-      </div>
-      <div class="job_salary">
-        <h4>$8.7 - $13.2k /yr</h4>
-        <span>2 days ago</span>
-      </div>
-    </div>
-    <div class="job_card">
-      <div class="job_details">
-        <div class="img">
-          <i class="fab fa-facebook"></i>
-        </div>
-        <div class="text">
-          <h2>Product Developer</h2>
-          <span>Facbook - Manager Post</span>
-        </div>
-      </div>
-      <div class="job_salary">
-        <h4>$11 - $18.5k /yr</h4>
-        <span>2 days ago</span>
-      </div>
-    </div>
-    <div class="job_card">
-      <div class="job_details">
-        <div class="img">
-          <i class="fab fa-git-alt"></i>
-        </div>
-        <div class="text">
-          <h2>Programmer</h2>
-          <span>Github - Juni Post</span>
-        </div>
-      </div>
-      <div class="job_salary">
-        <h4>$6 - $11.5k /yr</h4>
-        <span>3 days ago</span>
-      </div>
-    </div>
-    <div class="job_card">
-      <div class="job_details">
-        <div class="img">
-          <i class="fab fa-youtube"></i>
-        </div>
-        <div class="text">
-          <h2>React.js Expert</h2>
-          <span>Youtube - VIP</span>
-        </div>
-      </div>
-      <div class="job_salary">
-        <h4>$12.5 - $25.5k /yr</h4>
-        <span>4 days ago</span>
-      </div>
-    </div>
-  </div>
-  </section>
-  {% endblock content %}
+  {% block content %}{% endblock content %}
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
