template:category:details

--- a/apps/templates/includes/menu.html
+++ b/apps/templates/includes/menu.html
@@ -1,7 +1,7 @@
 <div class="mt-3">
     <a href="{% url "repository" slug=slug %}" class="btn btn-outline-dark btn-sm active" disabled>Información básica</a>
     <a href="{% url "description" slug=slug %}" class="btn btn-outline-dark btn-sm" disabled>Descripción de software</a>
-    <a href="{% url "category_license" slug=slug %}" class="btn btn-outline-dark btn-sm" disabled>categorización</a>
+    <a href="{% url "categorization" slug=slug %}" class="btn btn-outline-dark btn-sm" disabled>categorización</a>
     <a href="#" class="btn btn-outline-dark btn-sm" disabled>Carácteristicas</a>
     <a href="#" class="btn btn-outline-dark btn-sm" disabled>Arquitectura</a>
     <a href="#" class="btn btn-outline-dark btn-sm" disabled>Instalación y configuración</a>
